java: Set release version to 17 (#507)
* Set default release version to 17
* Enable Error prone with Nullaway
* Enable Checkstyle